Start update plot scripts

--- a/scripts/plots/hpl.ipynb
+++ b/scripts/plots/hpl.ipynb
@@ -19,9 +19,46 @@
     "\n",
     "for ii, i in enumerate(N):\n",
     "    df_tmp = pd.DataFrame()\n",
-    "    for f in os.listdir(\"../experiments/%d_fpga\" % i):\n",
+    "    for f in os.listdir(\"../../experiments/%d_fpga\" % i):\n",
+    "        if any(f.endswith(e) for e in [\".txt\",\".out\"]) and any(f.startswith(s) for s in [\"hpl\"]) and not \"b8\" in f:\n",
+    "            df_parsed = parse_raw_to_csv.parse_file_or_folder(os.path.join(\"../../experiments/%d_fpga\" % i, f), parse_raw_to_csv.parse_map.values())\n",
+    "            if df_parsed.empty:\n",
+    "                continue\n",
+    "            if \"pcie\" in f:\n",
+    "                df_parsed[\"type\"] = \"PCIE\"\n",
+    "                df_parsed[\"norm_flops\"] = float(df_parsed[\"lu_gflops\"]) / (233.4 * 5 * (n[ii])) * 100\n",
+    "            else:\n",
+    "                df_parsed[\"type\"] = \"IEC\"\n",
+    "                df_parsed[\"norm_flops\"] = float(df_parsed[\"lu_gflops\"]) / (244 * 5 * (n[ii])) * 100\n",
+    "            df_tmp = df_tmp.append(df_parsed)\n",
+    "    df_tmp[\"N\"] = i\n",
+    "    df_tmp[\"n\"] = n[ii]\n",
+    "    df = df.append(df_tmp)\n",
+    "\n",
+    "for ii, i in enumerate(N):\n",
+    "    df_tmp = pd.DataFrame()\n",
+    "    for f in os.listdir(\"../../experiments/%d_fpga\" % i):\n",
+    "        if any(f.endswith(e) for e in [\".txt\",\".out\"]) and any(f.startswith(s) for s in [\"hpl\"]) and \"b8\" in f:\n",
+    "            df_parsed = parse_raw_to_csv.parse_file_or_folder(os.path.join(\"../../experiments/%d_fpga\" % i, f), parse_raw_to_csv.parse_map.values())\n",
+    "            if df_parsed.empty:\n",
+    "                continue\n",
+    "            df_parsed[\"type\"] = \"PCIE (b=8)\"\n",
+    "            df_parsed[\"norm_flops\"] = float(df_parsed[\"lu_gflops\"]) / (280 * 2 * (n[ii])) * 100\n",
+    "            df_tmp = df_tmp.append(df_parsed)\n",
+    "    df_tmp[\"N\"] = i\n",
+    "    df_tmp[\"n\"] = n[ii]\n",
+    "    df = df.append(df_tmp)\n",
+    "\n",
+    "for ii, i in enumerate([1,2]):\n",
+    "    df_tmp = pd.DataFrame()\n",
+    "    for f in os.listdir(\"../../experiments/%d_fpga/u280\" % i):\n",
     "        if any(f.endswith(e) for e in [\".txt\",\".out\"]) and any(f.startswith(s) for s in [\"hpl\"]):\n",
-    "            df_tmp = df_tmp.append(parse_raw_to_csv.parse_file_or_folder(os.path.join(\"../experiments/%d_fpga\" % i, f), parse_raw_to_csv.parse_map.values()))\n",
+    "            if df_parsed.empty:\n",
+    "                continue\n",
+    "            df_parsed = parse_raw_to_csv.parse_file_or_folder(os.path.join(\"../../experiments/%d_fpga/u280\" % i, f), parse_raw_to_csv.parse_map.values())\n",
+    "            df_parsed[\"type\"] = \"PCIE\"\n",
+    "            df_parsed[\"norm_flops\"] = float(df_parsed[\"lu_gflops\"]) / (253 * 2 * (n[ii])) * 100\n",
+    "            df_tmp = df_tmp.append(df_parsed)\n",
     "    df_tmp[\"N\"] = i\n",
     "    df_tmp[\"n\"] = n[ii]\n",
     "    df = df.append(df_tmp)\n",
@@ -71,11 +108,14 @@
     "\n",
     "for ii, i in enumerate(N):\n",
     "    df_tmp = pd.DataFrame()\n",
-    "    with open(\"../experiments/cpu_hpl/strong_scaling/%d_cpu/xhpl_intel64_static_outputs.txt\" % i) as f:\n",
-    "            content = f.read()\n",
-    "            res = re.search(regex, content)\n",
-    "            if res is not None:\n",
-    "                df_tmp = df_tmp.append(res.groupdict(), ignore_index=True)\n",
+    "    try:\n",
+    "        with open(\"../../experiments/cpu_hpl/strong_scaling/%d_cpu/xhpl_intel64_static_outputs.txt\" % i) as f:\n",
+    "                content = f.read()\n",
+    "                res = re.search(regex, content)\n",
+    "                if res is not None:\n",
+    "                    df_tmp = df_tmp.append(res.groupdict(), ignore_index=True)\n",
+    "    except:\n",
+    "        pass\n",
     "    df_tmp[\"N\"] = i\n",
     "    df_tmp[\"n\"] = n[ii]\n",
     "    df_cpu_strong = df_cpu_strong.append(df_tmp)\n",
@@ -89,7 +129,7 @@
     "\n",
     "for ii, i in enumerate(N):\n",
     "    df_tmp = pd.DataFrame()\n",
-    "    with open(\"../experiments/cpu_hpl/weak_scaling/%d_cpu/xhpl_intel64_static_outputs.txt\" % i) as f:\n",
+    "    with open(\"../../experiments/cpu_hpl/weak_scaling/%d_cpu/xhpl_intel64_static_outputs.txt\" % i) as f:\n",
     "            content = f.read()\n",
     "            res = re.search(regex, content)\n",
     "            if res is not None:\n",
@@ -150,24 +190,154 @@
     "sns.set_theme()\n",
     "\n",
     "fig, hpl = plt.subplots(1)\n",
-    "hpl.scatter(np.sqrt(df_weak[\"n\"]), df_weak[\"lu_gflops\"] * 1.0e-3, label=\"FPGA N=24,576 ⋅ t\", color=\"C0\",marker=\"x\")\n",
-    "hpl.scatter(np.sqrt(df_strong[\"n\"]), df_strong[\"lu_gflops\"] * 1.0e-3, label=\"FPGA N=24,576\", marker=\"o\", color=\"C0\" )\n",
-    "hpl.scatter(np.sqrt(df_cpu_weak[\"n\"]), df_cpu_weak[\"lu_gflops\"] * 1.0e-3, label=\"CPU  N=24,576 ⋅ t\", marker=\"x\", color=\"C1\" )\n",
-    "hpl.scatter(np.sqrt(df_cpu_strong[\"n\"]), df_cpu_strong[\"lu_gflops\"] * 1.0e-3, label=\"CPU  N=24,576\", marker=\"o\", color=\"C1\" )\n",
-    "single_perf = df_strong[df_strong[\"N\"] == 1][\"lu_gflops\"] * 1.0e-3\n",
-    "single_perf_cpu = df_cpu_strong[df_cpu_strong[\"N\"] == 1][\"lu_gflops\"] * 1.0e-3\n",
-    "hpl.step(list(range(1,7)), [0,single_perf, 7.06101e-01 * 4, 4.83296e-01 * 9, 3.68730e-01*16, 3.12129e-01*25])\n",
-    "hpl.plot(np.linspace(1,6), [single_perf * n * n for n in np.linspace(1,6)], label=\"Extrapolation FPGA\", color=\"C0\" )\n",
-    "hpl.plot(np.linspace(1,6), [single_perf_cpu * n * n for n in np.linspace(1,6)], label=\"Extrapolation CPU\", color=\"C1\" )\n",
-    "hpl.annotate(\"FPGA = t² ⋅ %3.1f GFLOP/s\" % (single_perf * 1.0e3), (0.05,9))\n",
-    "hpl.annotate(\"CPU = t² ⋅ %3.1f GFLOP/s\" % (single_perf_cpu * 1.0e3), (0.35,11))\n",
-    "hpl.annotate(\"t² ⋅ p_t\", (3.8,7))\n",
+    "hpl.bar(np.sqrt(df_weak[df_weak[\"device\"].str.contains(\"xilinx\")][\"n\"]) - 0.2, df_weak[df_weak[\"device\"].str.contains(\"xilinx\")][\"norm_flops\"], label=\"Xilinx Alveo U280\", color=\"C0\", width=0.2)\n",
+    "hpl.bar(np.sqrt(df_weak[df_weak[\"device\"].str.contains(\"p520_hpc\")][\"n\"]) - 0.0, df_weak[df_weak[\"device\"].str.contains(\"p520_hpc\")][\"norm_flops\"], label=\"Nallatech 520N HPC\", color=\"C1\", width=0.2)\n",
+    "hpl.bar(np.sqrt(df_weak[df_weak[\"device\"].str.contains(\"p520_max\")][\"n\"]) + 0.2, df_weak[df_weak[\"device\"].str.contains(\"p520_max\")][\"norm_flops\"], label=\"Nallatech 520N MAX\", color=\"C2\", width=0.2)\n",
+    "\n",
+    "for t in range(2,6):\n",
+    "    hpl.bar(t-0.2, df_weak[(df_weak[\"size\"] == np.ceil(48) * 512) & (df_weak[\"device\"].str.contains(\"xilinx\")) & (df_weak[\"n\"] == 1)][\"norm_flops\"], color=\"C0\", alpha=0.6, width=0.2)\n",
+    "    hpl.bar(t+0.2, df_weak[(df_weak[\"size\"] == np.ceil(48) * 512) & (df_weak[\"device\"].str.contains(\"p520_max\")) & (df_weak[\"n\"] == 1)][\"norm_flops\"], color=\"C2\", alpha=0.6, width=0.2)\n",
+    "    #hpl.bar(t+0.0, df_weak[(df_weak[\"device\"].str.contains(\"p520_hpc\")) & (df_weak[\"n\"] == 1)][\"norm_flops\"], color=\"C1\", alpha=0.6, width=0.2)\n",
+    "\n",
+    "#hpl.bar(np.array(range(2,5))+0.4, [68.6, 68.1, 67.8], color=\"C2\", alpha=0.6, width=0.2)\n",
+    "\n",
+    "hpl.set_xlabel(\"Torus Width (t)\")\n",
+    "hpl.set_ylabel(\"norm. GFLOP/s\")\n",
+    "hpl.set_ylim((0.0,72.0))\n",
+    "hpl.legend(loc=\"lower right\", bbox_to_anchor=(1,0))\n",
+    "fig.savefig(\"hpl_torus_norm.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "#Just use set_theme() function of seaborn library for a nice looking appearance.\n",
+    "sns.set_theme()\n",
+    "\n",
+    "fig, hpl = plt.subplots(1)\n",
+    "hpl.bar(np.sqrt(df_weak[df_weak[\"device\"].str.contains(\"xilinx\")][\"n\"]) - 0.2, df_weak[df_weak[\"device\"].str.contains(\"xilinx\")][\"total_gflops\"] * 1.0e-3, label=\"Xilinx Alveo U280\", color=\"C0\", width=0.2)\n",
+    "hpl.bar(np.sqrt(df_weak[df_weak[\"device\"].str.contains(\"p520_hpc\")][\"n\"]) - 0.0, df_weak[df_weak[\"device\"].str.contains(\"p520_hpc\")][\"total_gflops\"] * 1.0e-3, label=\"Nallatech 520N HPC\", color=\"C1\", width=0.2)\n",
+    "hpl.bar(np.sqrt(df_weak[df_weak[\"device\"].str.contains(\"p520_max\")][\"n\"]) + 0.2, df_weak[df_weak[\"device\"].str.contains(\"p520_max\")][\"total_gflops\"] * 1.0e-3, label=\"Nallatech 520N MAX\", color=\"C2\", width=0.2)\n",
+    "\n",
+    "for t in range(2,6):\n",
+    "    hpl.bar(t-0.2, df_weak[(df_weak[\"size\"] == np.ceil(48) * 512) & (df_weak[\"device\"].str.contains(\"xilinx\")) & (df_weak[\"n\"] == 1)][\"total_gflops\"] * 1.0e-3 * (t ** 2), color=\"C0\", alpha=0.6, width=0.2)\n",
+    "    hpl.bar(t+0.2, df_weak[(df_weak[\"size\"] == np.ceil(48) * 512) & (df_weak[\"device\"].str.contains(\"p520_max\")) & (df_weak[\"n\"] == 1)][\"total_gflops\"] * 1.0e-3 * (t ** 2), color=\"C2\", alpha=0.6, width=0.2)\n",
+    "    #hpl.bar(t+0.0, df_weak[(df_weak[\"device\"].str.contains(\"p520_hpc\")) & (df_weak[\"n\"] == 1)][\"norm_flops\"], color=\"C1\", alpha=0.6, width=0.2)\n",
+    "\n",
+    "hpl.bar(np.array(range(2,5))+0.4, np.array([68.6, 68.1, 67.8])  * 1.0e-3, color=\"C2\", alpha=0.6, width=0.2)\n",
+    "\n",
+    "\n",
     "hpl.set_xlabel(\"Torus Width (t)\")\n",
     "hpl.set_ylabel(\"TFLOP/s\")\n",
-    "hpl.set_xlim((0,6))\n",
-    "hpl.set_ylim((0,25))\n",
-    "hpl.legend()\n",
+    "#hpl.set_ylim((0.0,72.0))\n",
+    "hpl.legend(loc=\"upper left\", bbox_to_anchor=(0,1))\n",
     "fig.savefig(\"hpl_torus.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_scaling = pd.read_csv(\"hpl_scaling.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "#Just use set_theme() function of seaborn library for a nice looking appearance.\n",
+    "sns.set_theme()\n",
+    "\n",
+    "fig, hpl = plt.subplots(1)\n",
+    "hpl.bar(np.sqrt(df_strong[df_strong[\"device\"].str.contains(\"xilinx\")][\"n\"]) - 0.2, df_strong[df_strong[\"device\"].str.contains(\"xilinx\")][\"norm_flops\"], label=\"Xilinx Alveo U280\", color=\"C0\", width=0.2)\n",
+    "hpl.bar(np.sqrt(df_strong[df_strong[\"device\"].str.contains(\"p520_hpc\")][\"n\"]) - 0.0, df_strong[df_strong[\"device\"].str.contains(\"p520_hpc\")][\"norm_flops\"], label=\"Nallatech 520N HPC\", color=\"C1\", width=0.2)\n",
+    "hpl.bar(np.sqrt(df_strong[df_strong[\"device\"].str.contains(\"p520_max\")][\"n\"]) + 0.2, df_strong[df_strong[\"device\"].str.contains(\"p520_max\")][\"norm_flops\"], label=\"Nallatech 520N MAX\", color=\"C2\", width=0.2)\n",
+    "\n",
+    "for t in range(2,6):\n",
+    "    hpl.bar(t-0.2, df_scaling[(df_scaling[\"size\"] == np.ceil(48/t) * 512) & (df_scaling[\"device\"].str.contains(\"xilinx\"))][\"norm_flops\"], color=\"C0\", alpha=0.6, width=0.2)\n",
+    "for t in range(1,6):\n",
+    "    hpl.bar(t+0.2, df_scaling[(df_scaling[\"size\"] == np.ceil(48/t) * 512) & (df_scaling[\"device\"].str.contains(\"p520_max\"))][\"norm_flops\"], color=\"C2\", alpha=0.6, width=0.2)\n",
+    "    hpl.bar(t+0.0, df_scaling[(df_scaling[\"m\"] == np.ceil(48/t)) & (df_scaling[\"size\"]/np.ceil(48/t) == 512) & (df_scaling[\"device\"].str.contains(\"p520_hpc\"))][\"norm_flops\"], color=\"C1\", alpha=0.6, width=0.2)\n",
+    "\n",
+    "\n",
+    "hpl.set_xlabel(\"Torus Width (t)\")\n",
+    "hpl.set_ylabel(\"norm. GFLOP/s\")\n",
+    "hpl.set_ylim((0.0,72.0))\n",
+    "hpl.legend(loc=\"upper right\", bbox_to_anchor=(1,1))\n",
+    "fig.savefig(\"hpl_torus_norm.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "#Just use set_theme() function of seaborn library for a nice looking appearance.\n",
+    "sns.set_theme()\n",
+    "\n",
+    "fig, hpl = plt.subplots(1)\n",
+    "hpl.bar(np.sqrt(df_strong[df_strong[\"device\"].str.contains(\"xilinx\")][\"n\"]) - 0.2, df_strong[df_strong[\"device\"].str.contains(\"xilinx\")][\"total_gflops\"], label=\"Xilinx Alveo U280\", color=\"C0\", width=0.2)\n",
+    "hpl.bar(np.sqrt(df_strong[df_strong[\"device\"].str.contains(\"p520_hpc\")][\"n\"]) - 0.0, df_strong[df_strong[\"device\"].str.contains(\"p520_hpc\")][\"total_gflops\"], label=\"Nallatech 520N HPC\", color=\"C1\", width=0.2)\n",
+    "hpl.bar(np.sqrt(df_strong[df_strong[\"device\"].str.contains(\"p520_max\")][\"n\"]) + 0.2, df_strong[df_strong[\"device\"].str.contains(\"p520_max\")][\"total_gflops\"], label=\"Nallatech 520N MAX\", color=\"C2\", width=0.2)\n",
+    "\n",
+    "for t in range(2,6):\n",
+    "    hpl.bar(t-0.2, df_scaling[(df_scaling[\"size\"] == np.ceil(48/t) * 512) & (df_scaling[\"device\"].str.contains(\"xilinx\"))][\"total_gflops\"] * (t ** 2), color=\"C0\", alpha=0.6, width=0.2)\n",
+    "for t in range(1,6):\n",
+    "    hpl.bar(t+0.2, df_scaling[(df_scaling[\"size\"] == np.ceil(48/t) * 512) & (df_scaling[\"device\"].str.contains(\"p520_max\"))][\"total_gflops\"] * (t ** 2), color=\"C2\", alpha=0.6, width=0.2)\n",
+    "    hpl.bar(t+0.0, df_scaling[(df_scaling[\"m\"] == np.ceil(48/t)) & (df_scaling[\"size\"]/np.ceil(48/t) == 512) & (df_scaling[\"device\"].str.contains(\"p520_hpc\"))][\"total_gflops\"] * (t ** 2), color=\"C1\", alpha=0.6, width=0.2)\n",
+    "\n",
+    "\n",
+    "\n",
+    "hpl.set_xlabel(\"Torus Width (t)\")\n",
+    "hpl.set_ylabel(\"norm. GFLOP/s\")\n",
+    "#hpl.set_ylim((0.0,72.0))\n",
+    "hpl.legend(loc=\"upper left\", bbox_to_anchor=(0,1))\n",
+    "fig.savefig(\"hpl_torus_strong.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "#Just use set_theme() function of seaborn library for a nice looking appearance.\n",
+    "sns.set_theme()\n",
+    "\n",
+    "fig, hpl = plt.subplots(1)\n",
+    "print(df_strong[df_strong[\"device\"].str.contains(\"p520_hpc\")][\"norm_flops\"] /  df_strong[(df_strong[\"device\"].str.contains(\"p520_hpc\")) & (df_strong[\"n\"] == 1)][\"norm_flops\"].values[0])\n",
+    "hpl.bar(np.sqrt(df_strong[df_strong[\"device\"].str.contains(\"xilinx\")][\"n\"]) - 0.2, df_strong[df_strong[\"device\"].str.contains(\"xilinx\")][\"norm_flops\"] /  df_strong[(df_strong[\"device\"].str.contains(\"xilinx\")) & (df_strong[\"n\"] == 1)][\"norm_flops\"].values[0], label=\"Xilinx Alveo U280\", color=\"C0\", width=0.2)\n",
+    "hpl.bar(np.sqrt(df_strong[df_strong[\"device\"].str.contains(\"p520_hpc\")][\"n\"]) - 0.0, df_strong[df_strong[\"device\"].str.contains(\"p520_hpc\")][\"norm_flops\"]  /  df_strong[(df_strong[\"device\"].str.contains(\"p520_hpc\")) & (df_strong[\"n\"] == 1)][\"norm_flops\"].values[0], label=\"Nallatech 520N HPC\", color=\"C1\", width=0.2)\n",
+    "hpl.bar(np.sqrt(df_strong[df_strong[\"device\"].str.contains(\"p520_max\")][\"n\"]) + 0.2, df_strong[df_strong[\"device\"].str.contains(\"p520_max\")][\"norm_flops\"]  /  df_strong[(df_strong[\"device\"].str.contains(\"p520_max\")) & (df_strong[\"n\"] == 1)][\"norm_flops\"].values[0], label=\"Nallatech 520N MAX\", color=\"C2\", width=0.2)\n",
+    "\n",
+    "for t in range(2,6):\n",
+    "    hpl.bar(t-0.2, df_scaling[(df_scaling[\"size\"] == np.ceil(48/t) * 512) & (df_scaling[\"device\"].str.contains(\"xilinx\"))][\"norm_flops\"]  /  df_strong[(df_strong[\"device\"].str.contains(\"xilinx\")) & (df_strong[\"n\"] == 1)][\"norm_flops\"].values[0], color=\"C0\", alpha=0.6, width=0.2)\n",
+    "for t in range(1,6):\n",
+    "    hpl.bar(t+0.2, df_scaling[(df_scaling[\"size\"] == np.ceil(48/t) * 512) & (df_scaling[\"device\"].str.contains(\"p520_max\"))][\"norm_flops\"]  /  df_strong[(df_strong[\"device\"].str.contains(\"p520_max\")) & (df_strong[\"n\"] == 1)][\"norm_flops\"].values[0], color=\"C2\", alpha=0.6, width=0.2)\n",
+    "    hpl.bar(t+0.0, df_scaling[(df_scaling[\"m\"] == np.ceil(48/t)) & (df_scaling[\"size\"]/np.ceil(48/t) == 512) & (df_scaling[\"device\"].str.contains(\"p520_hpc\"))][\"norm_flops\"]  /  df_strong[(df_strong[\"device\"].str.contains(\"p520_hpc\")) & (df_strong[\"n\"] == 1)][\"norm_flops\"].values[0], color=\"C1\", alpha=0.6, width=0.2)\n",
+    "\n",
+    "\n",
+    "hpl.set_xlabel(\"Torus Width (t)\")\n",
+    "hpl.set_ylabel(\"Speedup per FPGA\")\n",
+    "#hpl.set_ylim((0.0,72.0))\n",
+    "hpl.legend(loc=\"lower left\", bbox_to_anchor=(0,0))\n",
+    "fig.savefig(\"hpl_torus_norm_2.pdf\")"
    ]
   },
   {
@@ -207,9 +377,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+  },
   "kernelspec": {
-   "name": "python374jvsc74a57bd04e3163113eec36992159becb80c6db544d861abde29f0b6090e3d782eb374e1f",
-   "display_name": "Python 3.7.4 64-bit ('.venv': venv)"
+   "display_name": "Python 3.7.4 64-bit ('.venv': venv)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -221,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.8"
   },
   "metadata": {
    "interpreter": {
