--- a/scripts/plots/beff.ipynb
+++ b/scripts/plots/beff.ipynb
@@ -15,51 +15,96 @@
     "df = pd.DataFrame()\n",
     "\n",
     "for i in [1,2,5,8,13]:\n",
-    "    for f in os.listdir(\"../experiments/%d_fpga\" % i):\n",
-    "        if any(f.endswith(e) for e in [\".txt\",\".out\"]) and any(f.startswith(s) for s in [\"beff\"]):\n",
+    "    for f in os.listdir(\"../../experiments/%d_fpga\" % i):\n",
+    "        if any(f.endswith(e) for e in [\".txt\",\".out\"]) and any(f.startswith(s) for s in [\"beff\"]) and not any(t in f for t in [\"pcie\", \"cpu\"]):\n",
     "            df_tmp = pd.DataFrame()\n",
-    "            df_tmp = df_tmp.append(parse_raw_to_csv.parse_file_or_folder(os.path.join(\"../experiments/%d_fpga\" % i, f), parse_raw_to_csv.parse_map.values()))\n",
+    "            df_tmp = df_tmp.append(parse_raw_to_csv.parse_file_or_folder(os.path.join(\"../../experiments/%d_fpga\" % i, f), parse_raw_to_csv.parse_map.values()))\n",
     "            df_tmp[\"beff\"] = df_tmp[\"B/s\"].sum()/21\n",
     "            df_tmp[\"N\"] = i\n",
     "            df_tmp[\"type\"] = \"FPGA\"\n",
     "            df_tmp[\"n\"] = df_tmp[\"N\"] * 2\n",
     "            df_tmp.loc[df_tmp[\"n\"] == 2,\"n\"] = 1\n",
     "            df = df.append(df_tmp)\n",
-    "    for f in os.listdir(\"../experiments/b_eff_pcie\"):\n",
-    "        if any(f.endswith(e) for e in [\".txt\",\".out\"]) and any(f.startswith(s) for s in [\"beff\"]) and \"N%d_\" % i in f and  not \"mpi\" in f:\n",
+    "    for f in os.listdir(\"../../experiments/%d_fpga\" % i):\n",
+    "        if any(f.endswith(e) for e in [\".txt\",\".out\"]) and any(f.startswith(s) for s in [\"beff\"]) and \"pcie\" in f:\n",
     "            df_tmp = pd.DataFrame()\n",
-    "            df_tmp = df_tmp.append(parse_raw_to_csv.parse_file_or_folder(os.path.join(\"../experiments/b_eff_pcie\", f), parse_raw_to_csv.parse_map.values()))\n",
+    "            df_tmp = df_tmp.append(parse_raw_to_csv.parse_file_or_folder(os.path.join(\"../../experiments/%d_fpga\" % i, f), parse_raw_to_csv.parse_map.values()))\n",
     "            df_tmp[\"beff\"] = df_tmp[\"B/s\"].sum()/21\n",
     "            df_tmp[\"N\"] = i\n",
     "            df_tmp[\"type\"] = \"MPI + OpenCL\"\n",
     "            df_tmp[\"n\"] = df_tmp[\"N\"] * 2\n",
+    "            df_tmp.loc[df_tmp[\"n\"] == 2,\"n\"] = 1\n",
     "            df = df.append(df_tmp)\n",
-    "    for f in os.listdir(\"../experiments/b_eff_pcie\"):\n",
-    "        if any(f.endswith(e) for e in [\".txt\",\".out\"]) and any(f.startswith(s) for s in [\"beff\"]) and \"N%d_\" % i in f and \"mpi\" in f:\n",
+    "    for f in os.listdir(\"../../experiments/%d_fpga\" % i):\n",
+    "        if any(f.endswith(e) for e in [\".txt\",\".out\"]) and any(f.startswith(s) for s in [\"beff\"]) and \"cpu\" in f:\n",
     "            df_tmp = pd.DataFrame()\n",
-    "            df_tmp = df_tmp.append(parse_raw_to_csv.parse_file_or_folder(os.path.join(\"../experiments/b_eff_pcie\", f), parse_raw_to_csv.parse_map.values()))\n",
+    "            df_tmp = df_tmp.append(parse_raw_to_csv.parse_file_or_folder(os.path.join(\"../../experiments/%d_fpga\" % i, f), parse_raw_to_csv.parse_map.values()))\n",
     "            df_tmp[\"beff\"] = df_tmp[\"B/s\"].sum()/21\n",
     "            df_tmp[\"N\"] = i\n",
     "            df_tmp[\"type\"] = \"MPI\"\n",
     "            df_tmp[\"n\"] = df_tmp[\"N\"] * 2\n",
+    "            df_tmp.loc[df_tmp[\"n\"] == 2,\"n\"] = 1\n",
+    "            df = df.append(df_tmp)\n",
+    "\n",
+    "for i in [1,2]:\n",
+    "    for f in os.listdir(\"../../experiments/%d_fpga/u280\" % i):\n",
+    "        if any(f.endswith(e) for e in [\".txt\",\".out\"]) and any(f.startswith(s) for s in [\"beff\"]) and \"pcie\" in f:\n",
+    "            df_tmp = pd.DataFrame()\n",
+    "            df_tmp = df_tmp.append(parse_raw_to_csv.parse_file_or_folder(os.path.join(\"../../experiments/%d_fpga/u280\" % i, f), parse_raw_to_csv.parse_map.values()))\n",
+    "            df_tmp[\"beff\"] = df_tmp[\"B/s\"].sum()/21\n",
+    "            df_tmp[\"N\"] = i\n",
+    "            df_tmp[\"type\"] = \"MPI + OpenCL U280\"\n",
+    "            df_tmp[\"n\"] = df_tmp[\"N\"] * 2\n",
+    "            df_tmp.loc[df_tmp[\"n\"] == 2,\"n\"] = 1\n",
+    "            df = df.append(df_tmp)\n",
+    "    for f in os.listdir(\"../../experiments/%d_fpga/u280\" % i):\n",
+    "        if any(f.endswith(e) for e in [\".txt\",\".out\"]) and any(f.startswith(s) for s in [\"beff\"]) and \"cpu\" in f:\n",
+    "            df_tmp = pd.DataFrame()\n",
+    "            df_tmp = df_tmp.append(parse_raw_to_csv.parse_file_or_folder(os.path.join(\"../../experiments/%d_fpga/u280\" % i, f), parse_raw_to_csv.parse_map.values()))\n",
+    "            df_tmp[\"beff\"] = df_tmp[\"B/s\"].sum()/21\n",
+    "            df_tmp[\"N\"] = i\n",
+    "            df_tmp[\"type\"] = \"MPI U280\"\n",
+    "            df_tmp[\"n\"] = df_tmp[\"N\"] * 2\n",
+    "            df_tmp.loc[df_tmp[\"n\"] == 2,\"n\"] = 1\n",
     "            df = df.append(df_tmp)\n",
     "\n",
     "\n",
-    "\n",
     "df_tmp = pd.DataFrame()\n",
-    "for f in os.listdir(\"../experiments/1_fpga_full\"):\n",
-    "    if any(f.endswith(e) for e in [\".txt\",\".out\"]) and any(f.startswith(s) for s in [\"beff\"]):\n",
-    "        df_tmp = df_tmp.append(parse_raw_to_csv.parse_file_or_folder(os.path.join(\"../experiments/1_fpga_full\", f), parse_raw_to_csv.parse_map.values()))\n",
+    "for f in os.listdir(\"../../experiments/1_fpga_full\"):\n",
+    "    if any(f.endswith(e) for e in [\".txt\",\".out\"]) and any(f.startswith(s) for s in [\"beff\"]) and not any(t in f for t in [\"pcie\", \"cpu\"]):\n",
+    "        df_tmp = df_tmp.append(parse_raw_to_csv.parse_file_or_folder(os.path.join(\"../../experiments/1_fpga_full\", f), parse_raw_to_csv.parse_map.values()))\n",
     "        df_tmp[\"beff\"] = df_tmp[\"B/s\"].sum()/21\n",
     "df_tmp[\"N\"] = 1\n",
     "df_tmp[\"n\"] = df_tmp[\"N\"] * 2\n",
     "df_tmp[\"type\"] = \"FPGA\"\n",
     "df = df.append(df_tmp)\n",
+    "\n",
+    "df_tmp = pd.DataFrame()\n",
+    "for f in os.listdir(\"../../experiments/1_fpga_full\"):\n",
+    "    if any(f.endswith(e) for e in [\".txt\",\".out\"]) and any(f.startswith(s) for s in [\"beff\"]) and \"cpu\" in f:\n",
+    "        df_tmp = df_tmp.append(parse_raw_to_csv.parse_file_or_folder(os.path.join(\"../../experiments/1_fpga_full\", f), parse_raw_to_csv.parse_map.values()))\n",
+    "        df_tmp[\"beff\"] = df_tmp[\"B/s\"].sum()/21\n",
+    "df_tmp[\"N\"] = 1\n",
+    "df_tmp[\"n\"] = df_tmp[\"N\"] * 2\n",
+    "df_tmp[\"type\"] = \"MPI\"\n",
+    "df = df.append(df_tmp)\n",
+    "\n",
+    "df_tmp = pd.DataFrame()\n",
+    "for f in os.listdir(\"../../experiments/1_fpga_full\"):\n",
+    "    if any(f.endswith(e) for e in [\".txt\",\".out\"]) and any(f.startswith(s) for s in [\"beff\"]) and \"pcie\" in f:\n",
+    "        df_tmp = df_tmp.append(parse_raw_to_csv.parse_file_or_folder(os.path.join(\"../../experiments/1_fpga_full\", f), parse_raw_to_csv.parse_map.values()))\n",
+    "        df_tmp[\"beff\"] = df_tmp[\"B/s\"].sum()/21\n",
+    "df_tmp[\"N\"] = 1\n",
+    "df_tmp[\"n\"] = df_tmp[\"N\"] * 2\n",
+    "df_tmp[\"type\"] = \"MPI + OpenCL\"\n",
+    "df = df.append(df_tmp)\n",
+    "\n",
+    "\n",
     "df[\"benchmark\"] = df.index\n",
     "df = df.apply(pd.to_numeric, errors='ignore')\n",
     "df = df.reset_index()\n",
     "\n",
-    "df"
+    "df[df[\"type\"] == \"MPI\"][\"n\"].unique()"
    ]
   },
   {
@@ -75,14 +120,14 @@
     "\n",
     "fig, beff = plt.subplots(1)\n",
     "\n",
-    "for d in [\"FPGA\", \"MPI\", \"MPI + OpenCL\"]:\n",
+    "for d in [\"FPGA\", \"MPI\", \"MPI + OpenCL\", \"MPI + OpenCL U280\"]:\n",
     "    beff.scatter(df[df[\"type\"] == d][\"n\"], df[df[\"type\"] == d][\"beff\"]* 1.0e-9, marker=\"x\", label=d)\n",
     "beff.set_xlabel(\"Size of the ring (n)\")\n",
     "beff.set_ylabel(\"GB/s\")\n",
     "#beff.set_ylim((0,200))\n",
     "#beff.set_xlim((0,27))\n",
-    "beff.set_yscale(\"log\")\n",
-    "beff.set_xscale(\"log\")\n",
+    "#beff.set_yscale(\"log\")\n",
+    "#beff.set_xscale(\"log\")\n",
     "values = df[\"beff\"].values * 1.0e-9\n",
     "count = df[\"n\"].values\n",
     "beff.annotate(\"n ⋅ %.2f GB/s\" % values[0], (4,100))\n",
@@ -90,14 +135,14 @@
     "\n",
     "values = df[df[\"type\"] == \"MPI\"][\"beff\"].values * 1.0e-9\n",
     "count = df[df[\"type\"] == \"MPI\"][\"n\"].values\n",
-    "beff.annotate(\"n ⋅ %.2f GB/s\" % values[0], (7,8))\n",
-    "beff.plot(np.linspace(2,28), np.linspace(2,28) * values[0]/2)\n",
+    "#beff.annotate(\"n ⋅ %.2f GB/s\" % values[0], (7,8))\n",
+    "#beff.plot(np.linspace(2,28), np.linspace(2,28) * values[0]/2)\n",
     "\n",
     "values = df[df[\"type\"] == \"MPI + OpenCL\"][\"beff\"].values * 1.0e-9\n",
     "count = df[df[\"type\"] == \"MPI + OpenCL\"][\"n\"].values\n",
-    "beff.annotate(\"n ⋅ %.2f GB/s\" % values[0], (2.5,1))\n",
+    "#beff.annotate(\"n ⋅ %.2f GB/s\" % values[0], (2.5,1))\n",
     "\n",
-    "beff.plot(np.linspace(2,28), np.linspace(2,28) * values[0]/2)\n",
+    "#beff.plot(np.linspace(2,28), np.linspace(2,28) * values[0]/2)\n",
     "beff.legend()\n",
     "\n",
     "fig.savefig(\"beff_effective_bw.pdf\")"
@@ -108,6 +153,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "#Just use set_theme() function of seaborn library for a nice looking appearance.\n",
+    "sns.set_theme()\n",
+    "\n",
+    "fig, beff = plt.subplots(1)\n",
+    "\n",
+    "beff.plot(np.linspace(1,27), np.linspace(1,27))\n",
+    "\n",
+    "for d in [\"FPGA\", \"MPI\", \"MPI + OpenCL\", \"MPI + OpenCL U280\"]:\n",
+    "    if \"MPI\" in d:\n",
+    "        print(df[df[\"type\"] == d][\"n\"])\n",
+    "        beff.scatter(df[df[\"type\"] == d][\"n\"] , df[df[\"type\"] == d][\"beff\"] / (df[(df[\"type\"] == d) & (df[\"n\"] == 4)][\"beff\"].min() / 4), marker=\"x\", label=d)  \n",
+    "    else:\n",
+    "        beff.scatter(df[df[\"type\"] == d][\"n\"], df[df[\"type\"] == d][\"beff\"] / df[(df[\"type\"] == d)][\"beff\"].min(), marker=\"x\", label=d)\n",
+    "beff.set_xlabel(\"Size of the ring (n)\")\n",
+    "beff.set_ylabel(\"Speedup\")\n",
+    "#beff.set_ylim((0,2))\n",
+    "#beff.set_xlim((0,27))\n",
+    "#beff.set_yscale(\"log\")\n",
+    "# #beff.set_xscale(\"log\")\n",
+    "# values = df[\"beff\"].values * 1.0e-9\n",
+    "# count = df[\"n\"].values\n",
+    "# beff.annotate(\"n ⋅ %.2f GB/s\" % values[0], (4,100))\n",
+    "\n",
+    "\n",
+    "# values = df[df[\"type\"] == \"MPI\"][\"beff\"].values * 1.0e-9\n",
+    "# count = df[df[\"type\"] == \"MPI\"][\"n\"].values\n",
+    "# #beff.annotate(\"n ⋅ %.2f GB/s\" % values[0], (7,8))\n",
+    "# #beff.plot(np.linspace(2,28), np.linspace(2,28) * values[0]/2)\n",
+    "\n",
+    "# values = df[df[\"type\"] == \"MPI + OpenCL\"][\"beff\"].values * 1.0e-9\n",
+    "# count = df[df[\"type\"] == \"MPI + OpenCL\"][\"n\"].values\n",
+    "# #beff.annotate(\"n ⋅ %.2f GB/s\" % values[0], (2.5,1))\n",
+    "\n",
+    "# #beff.plot(np.linspace(2,28), np.linspace(2,28) * values[0]/2)\n",
+    "beff.legend()\n",
+    "\n",
+    "fig.savefig(\"beff_effective_bw.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "18.3/16"
    ]
@@ -217,9 +307,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+  },
   "kernelspec": {
-   "name": "python374jvsc74a57bd04e3163113eec36992159becb80c6db544d861abde29f0b6090e3d782eb374e1f",
-   "display_name": "Python 3.7.4 64-bit ('.venv': venv)"
+   "display_name": "Python 3.7.4 64-bit ('.venv': venv)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -231,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.8"
   },
   "metadata": {
    "interpreter": {
