Update plot notebooks

--- a/scripts/plots/basics.ipynb
+++ b/scripts/plots/basics.ipynb
@@ -18,19 +18,21 @@
     "\n",
     "df = pd.DataFrame()\n",
     "\n",
-    "for i in [1,2]:\n",
+    "for i in [1,2,5,8,13]:\n",
     "    df_tmp = pd.DataFrame()\n",
     "    for f in os.listdir(\"../../experiments/%d_fpga\" % i):\n",
     "        if any(f.endswith(e) for e in [\".txt\",\".out\"]) and any(f.startswith(s) for s in [\"stream\", \"ra\", \"fft\", \"gemm\"]):\n",
     "            df_tmp = df_tmp.append(parse_raw_to_csv.parse_file_or_folder(os.path.join(\"../../experiments/%d_fpga\" % i, f), parse_raw_to_csv.parse_map.values()))\n",
-    "    for f in os.listdir(\"../../experiments/%d_fpga/u280\" % i):\n",
-    "        if any(f.endswith(e) for e in [\".txt\",\".out\"]) and any(f.startswith(s) for s in [\"stream\", \"ra\", \"fft\", \"gemm\"]):\n",
-    "            df_tmp = df_tmp.append(parse_raw_to_csv.parse_file_or_folder(os.path.join(\"../../experiments/%d_fpga/u280\" % i, f), parse_raw_to_csv.parse_map.values()))\n",
+    "    if i <= 2:\n",
+    "        for f in os.listdir(\"../../experiments/%d_fpga/u280\" % i):\n",
+    "            if any(f.endswith(e) for e in [\".txt\",\".out\"]) and any(f.startswith(s) for s in [\"stream\", \"ra\", \"fft\", \"gemm\"]):\n",
+    "                df_tmp = df_tmp.append(parse_raw_to_csv.parse_file_or_folder(os.path.join(\"../../experiments/%d_fpga/u280\" % i, f), parse_raw_to_csv.parse_map.values()))\n",
     "    df_tmp[\"N\"] = i\n",
     "    df = df.append(df_tmp)\n",
     "\n",
     "df[\"n\"] = df[\"N\"] * 2\n",
     "df.loc[df[\"n\"] == 2,\"n\"] = 1\n",
+    "df.loc[(df[\"n\"] == 10) & (df.index == \"RandomAccess\"),\"n\"] = 8\n",
     "\n",
     "df_tmp = pd.DataFrame()\n",
     "for f in os.listdir(\"../../experiments/1_fpga_full\"):\n",
@@ -61,15 +63,15 @@
     "stream.set_xlabel(\"Number of FPGAs (n)\")\n",
     "stream.set_ylabel(\"GB/s\")\n",
     "stream.set_title(\"STREAM Triad\")\n",
-    "stream.set_ylim(0,100)\n",
-    "stream.set_xlim(0,5)\n",
+    "stream.set_ylim(0,540)\n",
+    "stream.set_xlim(0,27)\n",
     "#stream.set_xscale(\"log\")\n",
     "intel_values = df[(df[\"benchmark\"] == \"STREAM\") & (df[\"device\"].str.contains(\"p520_hpc_sg280l\"))][\"triad_rate\"].values * 1.0e-3/4\n",
     "xilinx_values = df[(df[\"benchmark\"] == \"STREAM\") & (df[\"device\"].str.contains(\"xilinx\"))][\"triad_rate\"].values * 1.0e-3/2\n",
     "count = df[df[\"benchmark\"] == \"STREAM\"][\"n\"].values\n",
     "# stream.plot([0,27], [0, 27 * intel_values[0]], label=\"n ⋅ %.1f GB/s\" % (intel_values[0] * 1.0e3))\n",
     "# stream.plot([0,27], [0, 27 * xilinx_values[0]], label=\"n ⋅ %.1f GB/s\" % (xilinx_values[0] * 1.0e3))\n",
-    "stream.plot([0,5], [0, 5* 19.2], label=\"n ⋅ 19.2 GB/s\")\n",
+    "stream.plot([0,27], [0, 27* 19.2], label=r\"n $\\cdot$ 19.2 GB/s\")\n",
     "#stream.grid(which=\"major\", linestyle=\"--\", color=\"gray\", axis=\"y\")\n",
     "stream.spines[\"right\"].set_visible(False)\n",
     "stream.spines[\"top\"].set_visible(False)\n",
@@ -83,12 +85,12 @@
     "ra.set_xlabel(\"Number of FPGAs (n)\")\n",
     "ra.set_ylabel(\"GUOP/s\")\n",
     "ra.set_title(\"RandomAccess\")\n",
-    "ra.set_ylim(0,0.25)\n",
-    "ra.set_xlim(0,5)\n",
-    "ra.set_xticks([0,1,2,3,4,5])\n",
+    "ra.set_ylim(0,1.4)\n",
+    "ra.set_xlim(0,27)\n",
+    "# ra.set_xticks([0,1,2,3,4,5])\n",
     "values = df[df[\"benchmark\"] == \"RandomAccess\"][\"gops\"].values\n",
     "count = df[df[\"benchmark\"] == \"RandomAccess\"][\"n\"].values\n",
-    "ra.plot(np.linspace(0,5), np.linspace(0,5) * (0.3/6), label=\"n ⋅ 50 MUOP/s\")\n",
+    "ra.plot(np.linspace(0,27), np.linspace(0,27) * (0.3/6), label=r\"n $\\cdot$ 50 MUOP/s\")\n",
     "#ra.plot(np.linspace(0,5), np.linspace(0,5) * (0.3/12))\n",
     "#ra.annotate(\"%.1f\" % values[0], (count[0] + 0.5, values[0] - 100))\n",
     "#ra.annotate(\"%.1f\" % values[1], (count[1] + 0.5, values[1] - 130))\n",
@@ -101,41 +103,41 @@
     "ra_error.scatter(df[(df[\"benchmark\"] == \"RandomAccess\") & (df[\"device\"].str.contains(\"xilinx\"))][\"n\"], df[(df[\"benchmark\"] == \"RandomAccess\") & (df[\"device\"].str.contains(\"xilinx\"))][\"error\"], label=\"U280 Error\", marker=\"o\")\n",
     "ra_error.set_ylabel(\"Error [%]\")\n",
     "# ra_error.set_ylim(0,1.0e-3)\n",
-    "ra_error.set_yticks(np.linspace(0, 0.0055, 5))\n",
+    "# ra_error.set_yticks(np.linspace(0, 0.0055, 5))\n",
     "#ra_error.set_yticks([6.0e-3/0.75 * 0.2,6.0e-3/0.75 * 0.4,6.0e-3/0.75 * 0.6])\n",
     "#ra.plot([0,18], [0.440,.440], linestyle=\"--\", color=\"darkblue\", alpha=0.7, label=\"440 MUOP/s\")\n",
     "#ra.grid(which=\"major\", linestyle=\"--\", color=\"gray\", axis=\"y\")\n",
     "ra.spines[\"top\"].set_visible(False)\n",
     "ra_error.spines[\"top\"].set_visible(False)\n",
-    "ra_error.annotate(\"n ⋅ %.1f MUOP/s\" % (values[0] * 1.0e3), (11,0.0003))\n",
+    "# ra_error.annotate(\"n ⋅ %.1f MUOP/s\" % (values[0] * 1.0e3), (11,0.0003))\n",
     "ra_error.grid(None)\n",
     "\n",
     "lines, labels = ra.get_legend_handles_labels()\n",
     "lines2, labels2 = ra_error.get_legend_handles_labels()\n",
-    "ra_error.legend(lines + lines2, labels + labels2, loc=\"upper left\", bbox_to_anchor=(0.0,.9))\n",
+    "ra_error.legend(lines + lines2, labels + labels2, loc=\"lower right\", bbox_to_anchor=(1,0))\n",
     "fig.tight_layout()\n",
     "fig.savefig(\"ra_scaling_performance.pdf\")\n",
     "\n",
-    "# fig, fft = plt.subplots(1, figsize=(6,2.5))\n",
+    "fig, fft = plt.subplots(1, figsize=(6,2.5))\n",
     "\n",
-    "# fft.scatter(df[df[\"benchmark\"] == \"FFT\"][\"n\"], df[df[\"benchmark\"] == \"FFT\"][\"best_flops\"] * 1.0e-3, marker=\"x\")\n",
-    "# fft.set_xlabel(\"Number of FPGAs (n)\")\n",
-    "# fft.set_ylabel(\"TFLOP/s\")\n",
-    "# fft.set_title(\"FFT\")\n",
-    "# fft.set_ylim(0,10)\n",
-    "# fft.set_xlim(0,27)\n",
-    "# values = df[df[\"benchmark\"] == \"FFT\"][\"best_flops\"].values * 1.0e-3\n",
-    "# fft.annotate(\"n ⋅ %.1f GFLOP/s\" % (values[0] * 1.0e3), (6,6))\n",
-    "# #fft.annotate(\"%.2f\" % values[0], (df[df[\"benchmark\"] == \"FFT\"][\"n\"][0] + 1, values[0] - 0.3))\n",
-    "# #fft.annotate(\"%.2f\" % values[1], (df[df[\"benchmark\"] == \"FFT\"][\"n\"][1] + 1, values[1] - 0.3))\n",
-    "# #fft.annotate(\"%.2f\" % values[2], (df[df[\"benchmark\"] == \"FFT\"][\"n\"][2] +1, values[2] - 0.3))\n",
-    "# #fft.annotate(\"%.2f\" % values[3], (df[df[\"benchmark\"] == \"FFT\"][\"n\"][3] - 1, values[3]- 1))\n",
-    "# fft.plot([0,27], [0, 27 * values[0]])\n",
-    "# #fft.grid(which=\"major\", linestyle=\"--\", color=\"gray\", axis=\"y\")\n",
-    "# fft.spines[\"right\"].set_visible(False)\n",
-    "# fft.spines[\"top\"].set_visible(False)\n",
-    "# fig.tight_layout()\n",
-    "# fig.savefig(\"fft_scaling_performance.pdf\")\n",
+    "fft.scatter(df[df[\"benchmark\"] == \"FFT\"][\"n\"], df[df[\"benchmark\"] == \"FFT\"][\"best_flops\"] * 1.0e-3, marker=\"x\")\n",
+    "fft.set_xlabel(\"Number of FPGAs (n)\")\n",
+    "fft.set_ylabel(\"TFLOP/s\")\n",
+    "fft.set_title(\"FFT\")\n",
+    "fft.set_ylim(0,10)\n",
+    "fft.set_xlim(0,27)\n",
+    "values = df[df[\"benchmark\"] == \"FFT\"][\"best_flops\"].values * 1.0e-3\n",
+    "fft.annotate(r\"n $\\cdot$ %.1f GFLOP/s\" % (values[0] * 1.0e3), (6,6))\n",
+    "#fft.annotate(\"%.2f\" % values[0], (df[df[\"benchmark\"] == \"FFT\"][\"n\"][0] + 1, values[0] - 0.3))\n",
+    "#fft.annotate(\"%.2f\" % values[1], (df[df[\"benchmark\"] == \"FFT\"][\"n\"][1] + 1, values[1] - 0.3))\n",
+    "#fft.annotate(\"%.2f\" % values[2], (df[df[\"benchmark\"] == \"FFT\"][\"n\"][2] +1, values[2] - 0.3))\n",
+    "#fft.annotate(\"%.2f\" % values[3], (df[df[\"benchmark\"] == \"FFT\"][\"n\"][3] - 1, values[3]- 1))\n",
+    "fft.plot([0,27], [0, 27 * values[0]])\n",
+    "#fft.grid(which=\"major\", linestyle=\"--\", color=\"gray\", axis=\"y\")\n",
+    "fft.spines[\"right\"].set_visible(False)\n",
+    "fft.spines[\"top\"].set_visible(False)\n",
+    "fig.tight_layout()\n",
+    "fig.savefig(\"fft_scaling_performance.pdf\")\n",
     "\n",
     "fig, gemm = plt.subplots(1, figsize=(6,2.5))\n",
     "\n",
@@ -144,20 +146,22 @@
     "gemm.set_xlabel(\"Number of FPGAs (n)\")\n",
     "gemm.set_ylabel(\"GFLOP/s\")\n",
     "gemm.set_title(\"GEMM\")\n",
-    "gemm.set_xlim(0,5)\n",
+    "gemm.set_xlim(0,27)\n",
     "#gemm.set_xscale(\"log\")\n",
     "values = df[df[\"benchmark\"] == \"GEMM\"][\"gflops\"].values\n",
-    "gemm.annotate(\"n ⋅ %.1f GFLOP/s\" % (values[0]), (6,22))\n",
+    "gemm.annotate(r\"n $\\cdot$ %.1f GFLOP/s\" % (values[0]), (6,22))\n",
     "#gemm.annotate(\"%.2f\" % values[0], (df[df[\"benchmark\"] == \"GEMM\"][\"n\"][0] + 1, values[0] - 0.3))\n",
     "#gemm.annotate(\"%.2f\" % values[1], (df[df[\"benchmark\"] == \"GEMM\"][\"n\"][1] + 1, values[1] - 0.3))\n",
     "#gemm.annotate(\"%.2f\" % values[2], (df[df[\"benchmark\"] == \"GEMM\"][\"n\"][2] +1, values[2] - 0.3))\n",
     "#gemm.annotate(\"%.2f\" % values[3], (df[df[\"benchmark\"] == \"GEMM\"][\"n\"][3] - 1, values[3]- 1))\n",
-    "gemm.plot([0,5], [0, 5 * 102.4])\n",
+    "gemm.plot([0,27], [0, 27 * 102.4], label=r\"n $\\cdot$ 102.4 GFLOP/s\")\n",
     "#gemm.grid(which=\"major\", linestyle=\"--\", color=\"gray\", axis=\"y\")\n",
     "gemm.spines[\"right\"].set_visible(False)\n",
     "gemm.spines[\"top\"].set_visible(False)\n",
+    "gemm.legend()\n",
     "\n",
     "fig.tight_layout()\n",
+    "plt.rcParams['text.usetex'] = False\n",
     "\n",
     "fig.savefig(\"gemm_scaling_performance.pdf\")"
    ]
@@ -189,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.9.2"
   },
   "metadata": {
    "interpreter": {
