--- a/scripts/plots/beff.ipynb
+++ b/scripts/plots/beff.ipynb
@@ -165,10 +165,12 @@
     "\n",
     "for d in [\"FPGA\", \"MPI\", \"MPI + OpenCL\", \"MPI + OpenCL U280\"]:\n",
     "    if \"MPI\" in d:\n",
-    "        print(df[df[\"type\"] == d][\"n\"])\n",
-    "        beff.scatter(df[df[\"type\"] == d][\"n\"] , df[df[\"type\"] == d][\"beff\"] / (df[(df[\"type\"] == d) & (df[\"n\"] == 4)][\"beff\"].min() / 4), marker=\"x\", label=d)  \n",
+    "        # beff.scatter(df[df[\"type\"] == d][\"n\"] , df[df[\"type\"] == d][\"beff\"] / (df[(df[\"type\"] == d) & (df[\"n\"] == 4)][\"beff\"].min() / 4), marker=\"x\", label=d)  \n",
+    "        # beff.scatter(df[df[\"type\"] == d][\"n\"], df[df[\"type\"] == d][\"beff\"] / df[(df[\"type\"] == d) & (df[\"n\"] == 1)][\"beff\"].min(), marker=\"x\", label=d)\n",
+    "        beff.scatter(df[df[\"type\"] == d][\"n\"], df[df[\"type\"] == d][\"beff\"] / 1.25e10, marker=\"x\", label=d)\n",
     "    else:\n",
-    "        beff.scatter(df[df[\"type\"] == d][\"n\"], df[df[\"type\"] == d][\"beff\"] / df[(df[\"type\"] == d)][\"beff\"].min(), marker=\"x\", label=d)\n",
+    "        # beff.scatter(df[df[\"type\"] == d][\"n\"], df[df[\"type\"] == d][\"beff\"] / df[(df[\"type\"] == d) & (df[\"n\"] == 1)][\"beff\"].min(), marker=\"x\", label=d)\n",
+    "        beff.scatter(df[df[\"type\"] == d][\"n\"], df[df[\"type\"] == d][\"beff\"] / (2.0e10), marker=\"x\", label=d)\n",
     "beff.set_xlabel(\"Size of the ring (n)\")\n",
     "beff.set_ylabel(\"Speedup\")\n",
     "#beff.set_ylim((0,2))\n",
@@ -325,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.9.2"
   },
   "metadata": {
    "interpreter": {
