--- a/scripts/plots/ptrans.ipynb
+++ b/scripts/plots/ptrans.ipynb
@@ -20,7 +20,7 @@
     "for ii, i in enumerate(N):\n",
     "    df_tmp = pd.DataFrame()\n",
     "    for f in os.listdir(\"../../experiments/%d_fpga\" % i):\n",
-    "        if any(f.endswith(e) for e in [\".txt\",\".out\"]) and any(f.startswith(s) for s in [\"ptrans\"]) and \"strong\" not in f:\n",
+    "        if any(f.endswith(e) for e in [\".txt\",\".out\"]) and any(f.startswith(s) for s in [\"ptrans\"]):\n",
     "            df_parsed = parse_raw_to_csv.parse_file_or_folder(os.path.join(\"../../experiments/%d_fpga\" % i, f), parse_raw_to_csv.parse_map.values())\n",
     "            if \"pcie\" in f:\n",
     "                df_parsed[\"type\"] = \"PCIE\"\n",
@@ -31,8 +31,10 @@
     "                df_parsed[\"norm_flops\"] = float(df_parsed[\"best_mem_bw\"]) / ((n[ii]))\n",
     "                df_parsed[\"norm_bw\"] = 32768 ** 2 * 4 * 3 / float(df_parsed[\"avg_calc_time\"]) / ((n[ii]))\n",
     "            df_tmp = df_tmp.append(df_parsed)\n",
+    "    df_tmp[\"block_size\"] = 512\n",
     "    df_tmp[\"N\"] = i\n",
     "    df_tmp[\"n\"] = n[ii]\n",
+    "    df_tmp[\"size\"] = (df_tmp[\"size\"].astype(int) / np.sqrt(n[ii])).astype(int)\n",
     "    df = df.append(df_tmp)\n",
     "\n",
     "for ii, i in enumerate([1,2]):\n",
@@ -44,15 +46,19 @@
     "            df_parsed[\"norm_flops\"] = float(df_parsed[\"best_mem_bw\"]) / ((n[ii]))\n",
     "            df_parsed[\"norm_bw\"] = 32768 ** 2 * 4 * 3 / float(df_parsed[\"avg_calc_time\"]) / ((n[ii]))\n",
     "            df_tmp = df_tmp.append(df_parsed)\n",
+    "    df_tmp[\"block_size\"] = 256\n",
     "    df_tmp[\"N\"] = i\n",
     "    df_tmp[\"n\"] = n[ii]\n",
+    "    df_tmp[\"size\"] = (df_tmp[\"size\"].astype(int) / np.sqrt(n[ii])).astype(int)\n",
     "    df = df.append(df_tmp)\n",
     "\n",
     "\n",
     "df[\"benchmark\"] = df.index\n",
-    "df = df.apply(pd.to_numeric, errors='ignore')\n",
-    "df = df.reset_index()\n",
     "\n",
+    "df[\"size\"] = (df[\"size\"] / (df[\"block_size\"] * np.sqrt(df[\"n\"])).astype(int)).astype(int) * (df[\"block_size\"] * np.sqrt(df[\"n\"])).astype(int)\n",
+    "df[\"flops\"] = df[\"size\"].astype(int) ** 2 / df[\"best_calc_time\"].astype(float)\n",
+    "df = df.reset_index()\n",
+    "df = df.apply(pd.to_numeric, errors='ignore')\n",
     "\n",
     "df"
    ]
@@ -64,9 +70,8 @@
    "outputs": [],
    "source": [
     "df_strongt = df\n",
-    "df_strong = df_strongt[df_strongt[\"size\"] == 32768]\n",
-    "df_weak = df_strongt[(df_strongt[\"size\"] > 32768) | (df_strongt[\"n\"] == 1)]\n",
-    "df_weak"
+    "df_strong = df_strongt[df_strongt[\"size\"] <= 34816]\n",
+    "df_weak = df_strongt[(df_strongt[\"size\"] > 34816) | (df_strongt[\"n\"] == 1)]"
    ]
   },
   {
@@ -75,10 +80,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import seaborn as sns\n",
+    "import seaborn as sns\n",
     "\n",
     "#Just use set_theme() function of seaborn library for a nice looking appearance.\n",
-    "#sns.set_theme()\n",
+    "sns.set_theme()\n",
     "\n",
     "fig, ptrans = plt.subplots(1)\n",
     "ptrans.scatter(df_weak[df_weak[\"type\"] == \"PCIE\"][\"n\"], df_weak[df_weak[\"type\"] == \"PCIE\"][\"best_mem_bw\"] * 1.0e-9 / df_weak[df_weak[\"type\"] == \"PCIE\"][\"n\"], label=\"Measurements d=168\", marker=\"x\")\n",
@@ -94,6 +99,60 @@
     "#ptrans.set_ylim((0,60))\n",
     "ptrans.legend()\n",
     "fig.savefig(\"ptrans_scaling_norm.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "#Just use set_theme() function of seaborn library for a nice looking appearance.\n",
+    "sns.set_theme()\n",
+    "\n",
+    "fig, ptrans = plt.subplots(nrows=1,ncols=2)\n",
+    "\n",
+    "n=1\n",
+    "\n",
+    "ptrans_scaling_strong = ptrans[0]\n",
+    "\n",
+    "# ptrans_scaling.scatter(df_weak[(df_weak[\"type\"] == \"PCIE\") & (~df_weak[\"device\"].str.contains(\"xilinx\"))][\"n\"], df_weak[(df_weak[\"type\"] == \"PCIE\") & (~df_weak[\"device\"].str.contains(\"xilinx\"))][\"flops\"] / (df_weak[(df_weak[\"type\"] == \"PCIE\") & (df_weak[\"n\"] == n) & (~df_weak[\"device\"].str.contains(\"xilinx\"))][\"flops\"].max() / n), marker=\"x\", color=\"C0\", label=\"520N PCIE weak\")\n",
+    "# ptrans_scaling.scatter(df_weak[df_weak[\"type\"] == \"IEC\"][\"n\"], df_weak[df_weak[\"type\"] == \"IEC\"][\"flops\"] / (df_weak[(df_weak[\"type\"] == \"IEC\") & (df_weak[\"n\"] == n)][\"flops\"].max() / n), marker=\"x\", color=\"C1\", label=\"520N IEC weak\")\n",
+    "# ptrans_scaling.scatter(df_weak[(df_weak[\"type\"] == \"PCIE\") & (df_weak[\"device\"].str.contains(\"xilinx\"))][\"n\"], df_weak[(df_weak[\"type\"] == \"PCIE\") & (df_weak[\"device\"].str.contains(\"xilinx\"))][\"flops\"] / (df_weak[(df_weak[\"type\"] == \"PCIE\") & (df_weak[\"n\"] == n) & (df_weak[\"device\"].str.contains(\"xilinx\"))][\"flops\"].max() / n), marker=\"x\", color=\"C2\", label=\"U280 PCIE weak\")\n",
+    "ptrans_scaling_strong.scatter(df_strong[(df_strong[\"type\"] == \"PCIE\") & (~df_strong[\"device\"].str.contains(\"xilinx\"))][\"n\"], df_strong[(df_strong[\"type\"] == \"PCIE\") & (~df_strong[\"device\"].str.contains(\"xilinx\"))][\"flops\"] / (df_weak[(df_weak[\"type\"] == \"PCIE\") & (df_weak[\"n\"] == n) & (~df_weak[\"device\"].str.contains(\"xilinx\"))][\"flops\"].max() / n),marker=\"x\", color=\"C0\", label=\"Nallatech 520N\")\n",
+    "ptrans_scaling_strong.scatter(df_strong[df_strong[\"type\"] == \"IEC\"][\"n\"], df_strong[df_strong[\"type\"] == \"IEC\"][\"flops\"] / (df_strong[(df_strong[\"type\"] == \"IEC\") & (df_strong[\"n\"] == n)][\"flops\"].max() / n),marker=\"x\", color=\"C1\",  label=\"Nallatech 520N IEC\")\n",
+    "ptrans_scaling_strong.scatter(df_strong[(df_strong[\"type\"] == \"PCIE\") & (df_strong[\"device\"].str.contains(\"xilinx\"))][\"n\"], df_strong[(df_strong[\"type\"] == \"PCIE\") & (df_strong[\"device\"].str.contains(\"xilinx\"))][\"flops\"] / (df_weak[(df_weak[\"type\"] == \"PCIE\") & (df_weak[\"n\"] == n) & (df_weak[\"device\"].str.contains(\"xilinx\"))][\"flops\"].max() / n),marker=\"x\", color=\"C2\", label=\"Xilinx Alveo U280\")\n",
+    "ptrans_scaling_strong.set_title(\"Strong Scaling\")\n",
+    "ptrans_scaling_strong.set_xlabel(\"Number FPGAs (n)\")\n",
+    "ptrans_scaling_strong.set_ylabel(\"Speedup\")\n",
+    "ptrans_scaling_strong.plot(np.linspace(0,26), np.linspace(0,26), linestyle=\":\", color=\"black\", label=\"optimal scaling\")\n",
+    "\n",
+    "ptrans_scaling_weak = ptrans[1]\n",
+    "\n",
+    "ptrans_scaling_weak.scatter(df_weak[(df_weak[\"type\"] == \"PCIE\") & (~df_weak[\"device\"].str.contains(\"xilinx\"))][\"n\"], df_weak[(df_weak[\"type\"] == \"PCIE\") & (~df_weak[\"device\"].str.contains(\"xilinx\"))][\"flops\"] / (df_weak[(df_weak[\"type\"] == \"PCIE\") & (df_weak[\"n\"] == n) & (~df_weak[\"device\"].str.contains(\"xilinx\"))][\"flops\"].max() / n), marker=\"x\", color=\"C0\")\n",
+    "ptrans_scaling_weak.scatter(df_weak[df_weak[\"type\"] == \"IEC\"][\"n\"], df_weak[df_weak[\"type\"] == \"IEC\"][\"flops\"] / (df_weak[(df_weak[\"type\"] == \"IEC\") & (df_weak[\"n\"] == n)][\"flops\"].max() / n), marker=\"x\", color=\"C1\")\n",
+    "ptrans_scaling_weak.scatter(df_weak[(df_weak[\"type\"] == \"PCIE\") & (df_weak[\"device\"].str.contains(\"xilinx\"))][\"n\"], df_weak[(df_weak[\"type\"] == \"PCIE\") & (df_weak[\"device\"].str.contains(\"xilinx\"))][\"flops\"] / (df_weak[(df_weak[\"type\"] == \"PCIE\") & (df_weak[\"n\"] == n) & (df_weak[\"device\"].str.contains(\"xilinx\"))][\"flops\"].max() / n), marker=\"x\", color=\"C2\")\n",
+    "ptrans_scaling_weak.set_title(\"Weak Scaling\")\n",
+    "ptrans_scaling_weak.set_xlabel(\"Number FPGAs (n)\")\n",
+    "ptrans_scaling_weak.set_ylabel(\"Speedup\")\n",
+    "ptrans_scaling_weak.plot(np.linspace(0,26), np.linspace(0,26), linestyle=\":\", color=\"black\")\n",
+    "\n",
+    "#ptrans.set_xlim((0,26))\n",
+    "#ptrans.set_ylim((0,60))\n",
+    "lgd = fig.legend(loc=\"center left\", bbox_to_anchor=(0.97,0.5))\n",
+    "fig.tight_layout()\n",
+    "fig.savefig(\"ptrans_scaling_norm.pdf\", bbox_extra_artists=(lgd,), bbox_inches='tight')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"best_calc_time\"]"
    ]
   },
   {
@@ -123,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.9.2"
   },
   "metadata": {
    "interpreter": {
